FIX: hide horizontal scrolling

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -29,6 +29,9 @@ $size-7: .75rem
 // footer
 $footer-padding: 2rem 0
 
+body
+  overflow-x: hidden
+
 .navbar .navbar-menu
   box-shadow:none !important
 
